# office365-audit-log-collector

./: .gitattributes  .gitignore  ApiConnection.py  AuditLogCollector.py  AuditLogSubscriber.py  AzureOMSInterface.py  Cargo.toml  Dockerfile  GraylogInterface.py  README.md  _config.yml  known_blobs  known_logs  output_AuditExchange.csv  output_AuditSharePoint.csv  pip_requirements_linux.txt  pip_requirements_win.txt  requirements.txt  todo
.github/: FUNDING.yml
.github/workflows/: release.yaml
ConfigExamples/: CsvOutput.yaml  azureBlob.yaml  azureLogAnalytics.yaml  azureTable.yaml  fileOutput.yaml  filter.yaml  filteredCsvOutput.yaml  filteredFileOutput.yaml  fluentd.yaml  fullConfig.yaml  graylog.yaml  prtg.yaml  schedule.yaml  sql.yaml
Docker/: entrypoint.sh
Release/: Dockerfile
Release/ConfigExamples/: CsvOutput.yaml  fullConfig.yaml  graylog.yaml  logAnalytics.yaml
Release/Linux/: OfficeAuditLogCollector
RustEngineWheels/: alc-0.1.0-cp310-none-win_amd64.whl
Source/: ApiConnection.py  AuditLogCollector.py  AuditLogSubscriber.py  AzureOMSInterface.py  GUI.py  GraylogInterface.py  PRTGInterface.py  PrtgConfig.yaml  config.yaml  filters.yaml  requirements.txt  schedule.yaml
Source/Interfaces/: AzureBlobInterface.py  AzureOMSInterface.py  AzureTableInterface.py  FileInterface.py  FluentdInterface.py  GraylogInterface.py  PRTGInterface.py  SqlInterface.py  _Interface.py
Source/RustEngine/: Cargo.toml  README.md
Source/RustEngine/src/: api_connection.rs  data_structures.rs  lib.rs
Source/UX/: CollectorWidget.kv  CollectorWidget.py  ConfigWidget.kv  ConfigWidget.py  ConnectionWidget.kv  ConnectionWidget.py  MainWidget.kv  MainWidget.py  SubscriberWidget.kv  SubscriberWidget.py
office_certs/: MicrosoftITTLSCA2.crt  manageoffice.bundle  manageofficecom.crt
src/: api_connection.rs  collector.rs  config.rs  data_structures.rs  main.rs
src/interactive_mode/: interactive.rs  mod.rs  tui.rs
src/interfaces/: azure_oms_interface.rs  file_interface.rs  fluentd_interface.rs  graylog_interface.rs  interactive_interface.rs  interface.rs  mod.rs
