[package]
name = "OfficeAuditLogCollector"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.16"
simple_logger = "4.3.3"
chrono = "0.4.19"
futures = "0.3.21"
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
tokio = {version="1.17.0", features=["full"]}
tokio-stream = "0.1.8"
serde="1.0.136"
serde_yaml = "0.9.32"
serde_json="1.0.79"
serde_derive = "1.0.136"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
polars = "0.38.1"
