[package]
name = "office_audit_log_collector"
version = "2.5.0"
edition = "2021"


[dependencies]
anyhow = "1.0.81"
tui-scrollview = "0.3.2"
ratatui = { version = "0.26.1", features = [] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
color-eyre = "0.6.3"
chrono = "0.4.19"
futures = "0.3.21"
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
serde = "1.0.136"
serde_yaml = "0.9.32"
serde_json="1.0.79"
serde_derive = "1.0.136"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
log = { version = "0.4.21", features = ["std"] }
poston = "0.7.8"
base64 = "0.22.0"
hmac = "0.12.1"
sha2 = "0.10.8"
async-trait = "0.1.77"
simple-logging = "2.0.2"
tokio-util = "0.7.10"
signal-hook = "0.3.17"
